@@ -2,22 +2,28 @@ package com.yas.payment.paypal.service;
 
 import com.paypal.core.PayPalHttpClient;
 import com.paypal.http.HttpResponse;
-import com.paypal.orders.*;
+import com.paypal.orders.AmountWithBreakdown;
+import com.paypal.orders.ApplicationContext;
+import com.paypal.orders.Capture;
+import com.paypal.orders.Order;
+import com.paypal.orders.OrderRequest;
+import com.paypal.orders.OrdersCaptureRequest;
+import com.paypal.orders.OrdersCreateRequest;
+import com.paypal.orders.PurchaseUnitRequest;
 import com.yas.payment.paypal.model.CheckoutIdHelper;
 import com.yas.payment.paypal.utils.Constants;
 import com.yas.payment.paypal.viewmodel.PaypalCapturePaymentRequest;
 import com.yas.payment.paypal.viewmodel.PaypalCapturePaymentResponse;
 import com.yas.payment.paypal.viewmodel.PaypalCreatePaymentRequest;
 import com.yas.payment.paypal.viewmodel.PaypalCreatePaymentResponse;
-import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Value;
-import org.springframework.stereotype.Service;
-
 import java.io.IOException;
 import java.math.BigDecimal;
 import java.util.List;
 import java.util.NoSuchElementException;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.stereotype.Service;
 
 @Service
 @Slf4j
@@ -31,7 +37,9 @@ public class PaypalService {
     private String cancelUrl;
 
     public PaypalCreatePaymentResponse createPayment(PaypalCreatePaymentRequest createPaymentRequest) {
-        PayPalHttpClient payPalHttpClient = payPalHttpClientInitializer.createPaypalClient(createPaymentRequest.paymentSettings());
+        PayPalHttpClient payPalHttpClient = payPalHttpClientInitializer.createPaypalClient(
+            createPaymentRequest.paymentSettings()
+        );
         OrderRequest orderRequest = new OrderRequest();
         orderRequest.checkoutPaymentIntent("CAPTURE");
 
@@ -45,7 +53,11 @@ public class PaypalService {
             .value(totalPrice.toString());
         PurchaseUnitRequest purchaseUnitRequest = new PurchaseUnitRequest().amountWithBreakdown(amountWithBreakdown);
         orderRequest.purchaseUnits(List.of(purchaseUnitRequest));
-        String paymentMethodReturnUrl = String.format("%s?paymentMethod=%s", returnUrl, createPaymentRequest.paymentMethod());
+        String paymentMethodReturnUrl = String.format(
+            "%s?paymentMethod=%s",
+            returnUrl,
+            createPaymentRequest.paymentMethod()
+        );
         ApplicationContext applicationContext = new ApplicationContext()
                 .returnUrl(paymentMethodReturnUrl)
                 .cancelUrl(cancelUrl)
@@ -69,8 +81,8 @@ public class PaypalService {
             CheckoutIdHelper.setCheckoutId(createPaymentRequest.checkoutId());
             return new PaypalCreatePaymentResponse("success", order.id(), redirectUrl);
         } catch (IOException e) {
-            log.error(e.getMessage());
-            return new PaypalCreatePaymentResponse("Error" + e.getMessage(),null, null);
+            log.error("Failed to create paypal payment", e);
+            return new PaypalCreatePaymentResponse("Error" + e.getMessage(), null, null);
         }
     }
 
@@ -81,13 +93,13 @@ public class PaypalService {
             HttpResponse<Order> httpResponse = payPalHttpClient.execute(ordersCaptureRequest);
             if (httpResponse.result().status() != null) {
                 Order order = httpResponse.result();
-                Capture capture = order.purchaseUnits().get(0).payments().captures().get(0);
+                Capture capture = order.purchaseUnits().getFirst().payments().captures().getFirst();
 
                 String paypalFee = capture.sellerReceivableBreakdown().paypalFee().value();
                 BigDecimal paymentFee = new BigDecimal(paypalFee);
                 BigDecimal amount = new BigDecimal(capture.amount().value());
 
-                PaypalCapturePaymentResponse capturedPayment = PaypalCapturePaymentResponse.builder()
+                return PaypalCapturePaymentResponse.builder()
                         .paymentFee(paymentFee)
                         .gatewayTransactionId(order.id())
                         .amount(amount)
@@ -95,7 +107,6 @@ public class PaypalService {
                         .paymentMethod("PAYPAL")
                         .checkoutId(CheckoutIdHelper.getCheckoutId())
                         .build();
-                return capturedPayment;
             }
         } catch (IOException e) {
             log.error(e.getMessage());
